TP5/k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager-ingress
  namespace: taskmanager-prod
  labels:
    app.kubernetes.io/name: taskmanager-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
spec:
  rules:
    - host: taskmanager.local
      http:
        paths:
          - path: /api/tasks
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8080
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8080
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
